swag /editprofile, /updateprofile, /changepassword
